modified structure database

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -32,8 +32,10 @@
                         <div class="panel panel-default alert alert-warning alert-dismissible">
                           <div class="panel-body">
                                 <% @user_creator.each do |comment| %>
-                                <h3 style="color:#3366ff"><%= Business.find(comment.thread.commontable_id).name %></h3>
-                                <h5><%= Business.find(comment.thread.commontable_id).address %></h5>
+                                <h3 style="color:#3366ff"><%= link_to Business.find(comment.thread.commontable_id).name, business_path(comment.thread.commontable_id) %></h3>
+                                <h5><% Business.find(comment.thread.commontable_id).addresses.each do |address|%></h5>
+                                   <i class="fa fa-map-marker" aria-hidden="true"></i> <%= address.name %><br>
+                                <% end %></h5><br>
                                 <p><i class="fa fa-comments-o" aria-hidden="true"></i>
                                      <%= comment.body %></p>
                                 <hr>
@@ -55,8 +57,10 @@
                         <div class="panel panel-default alert alert-warning alert-dismissible">
                           <div class="panel-body">
                             <% @user_ratings.each do |rate| %>
-                                <h3 style="color:#3366ff"><%= Business.find(rate.business_id).name %></h3>
-                                <h5><%= Business.find(rate.business_id).address %></h5>
+                                <h3 style="color:#3366ff"><%= link_to Business.find(rate.business_id).name, business_path(rate.business_id) %></h3>
+                                <h5><% Business.find(rate.business_id).addresses.each do |address| %>
+                                   <i class="fa fa-map-marker" aria-hidden="true"></i> <%= address.name %><br>
+                                <% end %></h5>
                                 
                                 <div id="rateYo<%= rate.id %>"></div>
                              
