--- a/app/views/businesses/_details.html.erb
+++ b/app/views/businesses/_details.html.erb
@@ -21,7 +21,12 @@
         <br>
         <h5><%= @business.description %></h5>
         <p>
-           <%= @business.address if @business.address? %>
+            <% unless @business.addresses.blank?  %>
+                <% @business.addresses.each do |address|  %>
+                    <i class="fa fa-map-marker"></i>
+                    <%= address.name %><br>
+                <% end %>
+            <% end %>
         </p>
         <% @business.phones.each do |phone| %>
         <p><i class="fa fa-phone"></i>
@@ -43,7 +48,7 @@
      <!--    <p><i class="fa fa-clock-o"></i>
         <abbr title="Hours">Tomorrow</abbr>: 10:00 - 22:00
         </p> -->
-        <a href = "https://maps.google.com/maps?saddr=&daddr=<%= @business.latitude %>, <%= @business.longitude %>&dirflg=d" > Directions</a><br>
+        <a href = "https://maps.google.com/maps?saddr=&daddr=<%# @business.latitude %>, <%# @business.longitude %>&dirflg=d" > Directions</a><br>
         <ul class="list-unstyled list-inline list-social-icons">
             <% unless @business.facebook.blank? %>
                 <li>
