--- a/app/views/businesses/_reviews.html.erb
+++ b/app/views/businesses/_reviews.html.erb
@@ -46,7 +46,7 @@
                         <% end %>
                     </a>
                     <div class="media-body">
-                        <h4 class="media-heading"><%= User.find(rate.user_id).name %>
+                        <h4 class="media-heading"><%= link_to User.find(rate.user_id).name, profiles_path(rate.user_id) %>
                             <small><%= rate.created_at %></small>
                         </h4>
                         <div id="rateYo<%= rate.id %>"></div>
