--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -39,23 +39,48 @@
 
 
 <script>
-    // function initMap() {
-    //       var latitude = <%# @business.latitude %>  
-    //       var longitude = <%# @business.longitude %>
+   function initialize() {
+    var map;
+    var bounds = new google.maps.LatLngBounds();
+    var mapOptions = {
+        mapTypeId: 'roadmap'
+    };
+                    
+    // Display a map on the page
+    map = new google.maps.Map(document.getElementById("geolocation"), mapOptions);
+    map.setTilt(45);
+        
+    // Multiple Markers
+    var markers = [
+      <% @business_addresses.each do |a| %>  
+        [<%= a.latitude %>, <%= a.longitude %>],
+      <% end %> 
+    ];
+                                
+    // Display multiple markers on a map
+    var infoWindow = new google.maps.InfoWindow(), marker, i;
+    
+    // Loop through our array of markers & place each one on the map  
+    for( i = 0; i < markers.length; i++ ) {
+        var position = new google.maps.LatLng(markers[i][0], markers[i][1]);
+        bounds.extend(position);
+        marker = new google.maps.Marker({
+            position: position,
+            map: map,
+        });
+        // Automatically center the map fitting all markers on the screen
+        map.fitBounds(bounds);
+    }
 
-    //       var myLatLng = {lat: latitude, lng: longitude };
+    // Override our map zoom level once our fitBounds function runs (Make sure it only runs once)
+    var boundsListener = google.maps.event.addListener((map), 'bounds_changed', function(event) {
+        this.setZoom(7);
+        google.maps.event.removeListener(boundsListener);
+    });
+    
+}
 
-    //     var map = new google.maps.Map(document.getElementById('geolocation'), {
-    //         zoom: 10,
-    //         center: myLatLng
-    //     });
-    //     var marker = new google.maps.Marker({
-    //         position: myLatLng,
-    //         map: map,
-    //         title: 'Hello World!'
-    //     });
-    //     }
-</script>text/javascript
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2Thur_PgWUQvdiGx2PDiUy2CKVkqTB2M&callback=initMap" async defer></script>
+</script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2Thur_PgWUQvdiGx2PDiUy2CKVkqTB2M&callback=initialize" async defer></script>
     <script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.9/src/markerclusterer_packed.js"></script>
 </div>
