added search and advanced form

--- a/app/views/businesses/_details.html.erb
+++ b/app/views/businesses/_details.html.erb
@@ -48,7 +48,9 @@
      <!--    <p><i class="fa fa-clock-o"></i>
         <abbr title="Hours">Tomorrow</abbr>: 10:00 - 22:00
         </p> -->
-        <a href = "https://maps.google.com/maps?saddr=&daddr=<%= @business.addresses.first.latitude %>, <%= @business.addresses.first.longitude %>&dirflg=d" > Directions</a><br>
+        <% if @business.addresses.first.present? %>
+            <a href = "https://maps.google.com/maps?saddr=&daddr=<%= @business.addresses.first.latitude %>, <%= @business.addresses.first.longitude %>&dirflg=d" > Directions</a><br>
+        <% end %>
        
         <ul class="list-unstyled list-inline list-social-icons">
             <% unless @business.facebook.blank? %>
