--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -18,8 +18,11 @@
 
 <% if @businesses.any? %>
   <h4 style="margin-left:8%;"><%= @businesses.size %>  businesses found</h4>
+  <% if @businesses.suggestions.any? %>
+    <h6 style="margin-left:8%;"> Did you mean: <%= link_to @businesses.suggestions.first,  search_index_path(query: @businesses.suggestions.first) %></h6>
+  <% end %>
 	<% @businesses.each do |business| %>
-		<div class="row" >	
+		<div class="row">	
 			<hr>
 			<div class="col-xs-6 col-md-3">
 				<% if business.logo.blank? %>
