Modified search and stylesheet fonts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
 </head>
   <body class="<%= body_class %>">
     <%# render "layouts/header" %>
-    <%= render "flashes" -%>
+    <%# render "flashes" -%>
     <%= yield %>
     <%= render "javascript" %>
    
