--- a/app/views/search/filter.html.erb
+++ b/app/views/search/filter.html.erb
@@ -25,18 +25,17 @@
         <form class="form-inline" role="form">
             <div class="form-group">
                 <label class="filter-col" style="margin-left:30;" for="pref-perpage">Category:</label>
-                <!-- <select id="pref-perpage" class="form-control"> -->
+             
                 <% @categories= Category.all.map(&:name) %>
             	 <%= select_tag :category, options_for_select(@categories) %>
-            </div> <!-- form group [rows] -->
+            </div> 
            
             <div class="form-group">
                 <label class="filter-col" style="margin-left:30;" for="pref-perpage">City:</label>
-                <!-- <select id="pref-perpage" class="form-control"> -->
                 <% @cities = City.all %>
         		<%= select_tag :city,  options_from_collection_for_select(@cities, "id", "name") %>
-            </div> <!-- form group [rows] -->
-           
+            </div> 
+
            <div class="form-group" style="margin-left:30px">    
                 <div class="checkbox" style="margin-left:10px; margin-right:10px;">
                 <%= check_box_tag(:rating) %>
@@ -64,12 +63,14 @@
     </div>
 </div>
 
+
 <% if @businesses.any? %>
   <h4 style="margin-left:8%;"><%= @businesses.size %>  businesses found</h4>
   <%#if @businesses.suggestions.any? %>
     <!-- <h6 style="margin-left:8%;"> Did you mean: <%# link_to @businesses.suggestions.first,  search_index_path(query: @businesses.suggestions.first) %></h6> -->
   <%# end %>
 	<% @businesses.each do |business| %>
+		<% next if @open && business.open != true %>
 		<div class="row">	
 			<hr>
 			<div class="col-xs-6 col-md-3">
