added and modified filter

--- a/app/views/businesses/_reviews.html.erb
+++ b/app/views/businesses/_reviews.html.erb
@@ -79,7 +79,7 @@
                         <% end %>
                     </a>
                     <div class="media-body">
-                        <h4 class="media-heading"><%= link_to User.find(rate.user_id).name, profiles_path(rate.user_id) %>
+                        <h4 class="media-heading"><%= link_to User.find(rate.user_id).email, profiles_path(rate.user_id) %>
                             <small><%= rate.created_at %></small>
                         </h4>
                         <div id="rateYo<%= rate.id %>"></div>
@@ -97,8 +97,8 @@
                     });
                 </script>
               </div>
-            <% end %>
-          </div>
+        <% end %>
+    </div>
 
         
         <!-- <div class="alert alert-info text-center" role="alert"> No reviews</div>                            -->
