--- a/app/views/layouts/_sign_in.html.erb
+++ b/app/views/layouts/_sign_in.html.erb
@@ -9,7 +9,7 @@
       <div class="modal-body">
         <br><br>          
           <div class="main">  
-               <%= link_to  user_omniauth_authorize_path(:google_oauth2) do %>
+               <%= link_to user_google_oauth2_omniauth_authorize_path do %>
                <img src="http://techulus.com/buttons/gplus.png", width="100%" height="50px" />
                <% end %>
               <div class="login-or">
