--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -16,106 +16,112 @@
 	</div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div id="filter-panel" class="collapse filter-panel">
-            <div class="panel panel-default">
-                <div class="panel-body">
-	 <%= form_tag("/search/filter", method: "get", class: "navbar-form navbar-left" ) do %>
-        <form class="form-inline" role="form">
-            <div class="form-group">
-                <label class="filter-col" style="margin-left:30;" for="pref-perpage">Category:</label>
-                <!-- <select id="pref-perpage" class="form-control"> -->
-                <% @categories= Category.all.map(&:name) %>
-            	 <%= select_tag :category, options_for_select(@categories) %>
-            </div> <!-- form group [rows] -->
-           
-            <div class="form-group">
-                <label class="filter-col" style="margin-left:30;" for="pref-perpage">City:</label>
-                <!-- <select id="pref-perpage" class="form-control"> -->
-                <% @cities = City.all %>
-        		<%= select_tag :city,  options_from_collection_for_select(@cities, "id", "name") %>
-            </div> <!-- form group [rows] -->
-           
-           <div class="form-group" style="margin-left:30px">    
-                <div class="checkbox" style="margin-left:10px; margin-right:10px;">
-                <%= check_box_tag(:rating) %>
-                <%= label_tag(:rating, "Highest Rated") %>
-                </div>
-            </div>
-
-            <div class="form-group" style="margin-left:30px">    
-                <div class="checkbox" style="margin-left:10px; margin-right:10px;">
-                <%= check_box_tag(:open) %>
-                <%= label_tag(:open, "Open") %>
-                </div>
-                <button type="submit" class="btn btn-default filter-col"style="margin-left:30px">
-                   Filter
-                </button>  
-            </div>
-        </form>
-    <% end %>
-                    </div>
-            </div>
-        </div>    
-        <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#filter-panel">
-            <span class="glyphicon glyphicon-cog"></span> Show Filter
-        </button>
-    </div>
+<div style="margin-left:54px">
+	<button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#filter-panel">
+		<span class="glyphicon glyphicon-cog"></span> Show Filter
+	</button>
 </div>
+<br>
 
-<% if @businesses.any? %>
-  <h4 style="margin-left:8%;"><%= @businesses.size %>  businesses found</h4>
-  <%#if @businesses.suggestions.any? %>
-    <!-- <h6 style="margin-left:8%;"> Did you mean: <%# link_to @businesses.suggestions.first,  search_index_path(query: @businesses.suggestions.first) %></h6> -->
-  <%# end %>
-	<% @businesses.each do |business| %>
-		<div class="row">	
+
+<div class="container">
+	<div class="row">
+		<div id="filter-panel" class="collapse filter-panel">
+			<div class="panel panel-default">
+				<div class="panel-body">
+
+					<%= form_tag("/search/filter", method: "get", class: "navbar-form navbar-left" ) do %>
+					<div class="form-group" style="margin-left:30px">
+						<label class="filter-col" style="margin-left:30;" for="pref-perpage">Category:</label>
+						<!-- <select id="pref-perpage" class="form-control"> -->
+							<% @categories= Category.all.map(&:name) %>
+							<%= select_tag :category, options_for_select(@categories), class: "form-control" %>
+						</div> <!-- form group [rows] -->
+						
+						<div class="form-group" style="margin-left:30px">
+							<label class="filter-col" style="margin-left:30;" for="pref-perpage">City:</label>
+							<!-- <select id="pref-perpage" class="form-control"> -->
+							<% @cities = City.all %>
+							<%= select_tag :city,  options_from_collection_for_select(@cities, "id", "name"), class: "form-control" %>
+						</div> <!-- form group [rows] -->
+						
+						<div class="form-group" style="margin-left:30px">	
+						  <%= number_field_tag :rate, nil,  min: 0, max: 5, class: "form-control" %>
+							<i class="fa fa-star" aria-hidden="true"></i>						
+						</div>
+
+						<div class="form-group" style="margin-left:30px">
+							<div class="checkbox" style="margin-left:10px; margin-right:10px;">
+								<%= check_box_tag(:open, class: "form-control") %>
+								<%= label_tag(:open, "Open") %>
+							</div>
+							<button type="submit" class="btn btn-info filter-col"style="margin-left:30px">
+								Filter
+							</button>
+						</div>
+					<% end %>
+
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+		<% if @businesses.any? %>
+		<h4 style="margin-left:8%;"><%= @businesses.size %>  businesses found</h4>
+		<%#if @businesses.suggestions.any? %>
+		<!-- <h6 style="margin-left:8%;"> Did you mean: <%# link_to @businesses.suggestions.first,  search_index_path(query: @businesses.suggestions.first) %></h6> -->
+		<%# end %>
+		<% @businesses.each do |business| %>
+		<% next if @open && business.open != true %>
+		<div class="row">
 			<hr>
 			<div class="col-xs-6 col-md-3">
 				<% if business.logo.blank? %>
-        	<%= image_tag "nologo.png", width: "80%", height: "90px"%>
+				<%= image_tag "nologo.png", width: "80%", height: "90px"%>
 				<% else %>
-        	<%= image_tag business.logo_url, width: "80%", height: "90px"%>
+				<%= image_tag business.logo_url, width: "80%", height: "90px"%>
 				<% end %>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-8">
 				<h4>
-				  <%= link_to business.name, business_path(business) %>
+				<%= link_to business.name, business_path(business) %>
 				</h4>
-				<% unless business.addresses.blank? %> 
-					<p class="">
+				<% unless business.addresses.blank? %>
+				<p class="">
 					<% business.addresses.each do |address|  %>
-						<i class="fa fa-map-marker"></i>
-								<%= address.name %><br>	
+					<i class="fa fa-map-marker"></i>
+					<%= address.name %><br>
 					<% end %>
-					</p>
+				</p>
 				<% end %>
 				<p><i class="fa fa-clock-o"></i> Posted on August 28, 2013 at 10:00 PM</p>
 				<div class="col-lg-7">
-						<ol class="breadcrumb">
-							<li><i class="fa fa-angle-double-right"></i><a href="#"> Website</a></li>
-							<li><i class="fa fa-map-marker"></i><a href="#"> Get Directions</a></li>
-							<li class="dropdown"><i class="fa fa-phone"></i>
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Telephone<b class="caret"></b></a>
-								<ul class="dropdown-menu">
+					<ol class="breadcrumb">
+						<li><i class="fa fa-angle-double-right"></i><a href="#"> Website</a></li>
+						<li><i class="fa fa-map-marker"></i><a href="#"> Get Directions</a></li>
+						<li class="dropdown"><i class="fa fa-phone"></i>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Telephone<b class="caret"></b></a>
+							<ul class="dropdown-menu">
 								<% business.phones do |phone| %>
-									<li>
-										<%= phone.number %>
-									</li>
+								<li>
+									<%= phone.number %>
+								</li>
 								<% end %>
-								</ul>
-							</li>
+							</ul>
 						</li>
-					</ol>
-				</div>
+					</li>
+				</ol>
 			</div>
-		 </div>
-		 
-		 <div>
-		 	
-		 </div>
+		</div>
+	</div>
+	
+	<div>
+		
+	</div>
 	<% end %>
-<% else %>
-  <h5>Not found </h5>
-<% end %>
+	<% else %>
+	<h5>Not found </h5>
+	<% end %>
