Added new layout design

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
     https://github.com/calebthompson/title#usage
   %>
     <%= favicon_link_tag 'YPIcon.ico' %>
-
+    <%= stylesheet_link_tag "toolkit.css" %>
+    <%= javascript_include_tag "toolkit.js" %>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,23 +21,13 @@
     <title>Yellow Page</title>
      
     <!-- Bootstrap Core CSS -->
-    <%= stylesheet_link_tag "bootstrap.min.css", media: "all" %>
-    <%= stylesheet_link_tag "modern-business.css", media: "all" %>
-    <%= stylesheet_link_tag "font-awesome.min.css", media: "all" %>
-    <%= stylesheet_link_tag "application", media: "all" %>
-    <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag "bootstrap-image-gallery.min", media: "all" %>
-    <%= stylesheet_link_tag "jquery.rateyo.css", media: "all" %>
-
+   
 
     <%# stylesheet_link_tag "blueimp-gallery.min.css", media: "all" %>
-    <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
 
     
     <!-- inside javascript -->
-    <%= javascript_include_tag 'jquery.js', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'jquery_ujs.js', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'jquery.rateyo.js', 'data-turbolinks-track' => true %>
+   
  
 
     <%# javascript_include_tag 'jquery.blueimp-gallery.min.js', 'data-turbolinks-track' => true %>
@@ -57,6 +48,5 @@
     <%= yield %>
     <%= render "javascript" %>
    
-    <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script> 
   </body>
 </html>
