--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -1,157 +1,269 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title></title>
+
+    
+
+    <!-- toolkit styles -->
+    
+    <!-- /toolkit styles -->
+
 </head>
 <body>
 
-    <!-- Header Carousel -->
-  <%= render "layouts/header" %>
-  <%= image_tag "cover2.jpg", width: "100%", height: "70%" %>
-  <div class="browse">
-    <div id="browse">
-       <p class="navbar-text">Browse</p>
-       <p class="navbar-text "><a href="#" class="navbar-link">Find People</a></p> 
-       <p class="navbar-text "><a href="#" class="navbar-link">Restaurant</a></p> 
-       <p class="navbar-text "><a href="#" class="navbar-link">Automative</a></p> 
-       <p class="navbar-text "><a href="#" class="navbar-link">Home Improvment</a></p> 
-       <p class="navbar-text "><a href="#" class="navbar-link">Health & Wellnes</a></p> 
-       <p class="navbar-text "><a href="#" class="navbar-link">Attorneys</a></p> 
-       <p class="navbar-text "><%= link_to "All businesses", businesses_path, class: "navbar-link"%></p>
-    </div>
-  </div>  
 
-    <!-- Page Content -->
-    <div class="container">
-        <!-- Marketing Icons Section -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">
-                    Welcome to Business
-                </h1> 
-            </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Bootstrap v3.2.0</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
-                    </div>
+
+    <header>
+    
+        <div class="container">
+            <div class="row header-nav">
+                <div class="col-md-3 text-left nav-item">
+                    <a href="../pages/home.html"><%= image_tag 'logo-sample.png' %></a>
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-gift"></i> Free &amp; Open Source</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
-                    </div>
+    
+                <div class="col-md-6 text-center nav-item">
+                    <ul class="list-inline list-styled header-list">
+                        <li><a href="">Apps</a></li>
+                        <li><a href="">Gadgets</a></li>
+                        <li><a href="">Science</a></li>
+                        <li><a href="">Nature</a></li>
+                        <li><a href="#">Creative</a></li>
+                    </ul>
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-compass"></i> Easy to Use</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <!-- /.row -->
-
-        <!-- Portfolio Section -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Businesses</h2>
-            </div>
-        <% @businesses.each do |business| %>
-            <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                 <% if business.logo.blank? %>
-                    <%= image_tag "nologo.png", width: "100%",:class => "img-responsive"%>
-                 <% else %>
-                  <%= image_tag business.logo_url, :class => "img-responsive"%>                  
-                 <% end %>
-                    <div class="caption">
-                        <h3><%= link_to business.name, business_path(business) %><br>
-                            <small></small>
-                        </h3>
-                        <p><%= business.description %></p>
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
+    
+                <div class="col-md-3 text-right nav-item">
+                    <button class="btn btn-default">Sign Up</button>
+                    <div class="header-dropdown">
+                        <a href="#" data-toggle="dropdown">
+                            <%= image_tag 'dropdown-icon.png' %>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="dLabel">
+                            <li><a href="">Settings</a></li>
+                            <li><a href="">Profile</a></li>
+                            <li><a href="">Security</a></li>
+                            <li><a href="">Log Out</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
-        <% end %>          
         </div>
-        <!-- /.row -->
-
-        <!-- Features Section -->
+    
+    </header>
+    <div class="hero">
+        <div class="container">
+            <div class="row">
+    
+                <div class="col-xs-6 center-block text-center">
+                    <h1>Find a store</h1>
+                    <h4 class="vert-offset-top-1">Don’t miss out on the latest deals & more add us to your inbox to get newest deals exclusives</h4>
+    
+                <div class="input-group vert-offset-top-3 vert-offset-bottom-9 hero-search-input">
+                  <input type="text" class="form-control" placeholder="Search for...">
+                  <span class="input-group-btn">
+                    <button class="btn btn-default" type="button">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                    </button>
+                  </span>
+                </div><!-- /input-group -->
+    
+                </div>
+    
+            </div>
+        </div>
+    </div><div class="section-tabs">
+    <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Modern Business Features</h2>
-            </div>
-            <div class="col-md-6">
-                <p>The Modern Business template by Start Bootstrap includes:</p>
-                <ul>
-                    <li><strong>Bootstrap v3.2.0</strong>
-                    </li>
-                    <li>jQuery v1.11.0</li>
-                    <li>Font Awesome v4.1.0</li>
-                    <li>Working PHP contact form with validation</li>
-                    <li>Unstyled page elements for easy customization</li>
-                    <li>17 HTML pages</li>
+            
+            <div class="col-md-12">
+                <ul class="list-inline section-tabs-ul">
+                    <li><span class="tabs-icon icon-hanger"></span><h6 class="strong inline-block">Clothing</h6></li>
+                    <li><span class="tabs-icon icon-glasses"></span><h6 class="strong inline-block">Shoes & Boots</h6></li>
+                    <li><span class="tabs-icon icon-bags"></span><h6 class="strong inline-block">Bags & Wallets</h6></li>
+                    <li><span class="tabs-icon icon-clock"></span><h6 class="strong inline-block">Electronics</h6></li>
+                    <li><span class="tabs-icon icon-glasses"></span><h6 class="strong inline-block">Accessories</h6></li>
                 </ul>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
             </div>
-            <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/700x450" alt="">
-            </div>
+
         </div>
-        <!-- /.row -->
+    </div>  
+</div><section class="view-products">
+    <div class="container">
+        <div class="row">   
 
-        <hr>
-
-        <!-- Call to Action Section -->
-        <div class="well">
-            <div class="row">
-                <div class="col-md-8">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
-                </div>
-                <div class="col-md-4">
-                    <a class="btn btn-lg btn-default btn-block" href="#">Call to Action</a>
-                </div>
+            <div class="col-xs-6 center-block text-center view-title">
+                <h3>Featured Collections</h3>
+                <h5 class="vert-offset-top-1">Customizable, comfortable, adaptable, and beautiful, the Rift is technology and design as remarkable as the experiences it enables</h5>
             </div>
+
         </div>
+        <div class="row view-items">
 
-        <hr>
-
-        <!-- Footer -->	
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
-                </div>
+            <div class="col-xs-4">
+            <div class="thumbnail">
+              <img src="http://lorempixel.com/400/220/food/1" alt="...">
+              <div class="caption">
+                <h4>Cherry Tomato Salad</h4>
+                <h6>Pine nuts are a special treat in any salad, but the other ingredients are swell  a special treat a special treat a special treat a special treattoo</h6>
+              </div>
             </div>
-        </footer>
+            </div>
+            <div class="col-xs-4">
+                <div class="thumbnail">
+              <img src="http://lorempixel.com/400/220/food/2" alt="...">
+              <div class="caption">
+                <h4>Cherry Tomato Salad</h4>
+                <h6>Pine nuts are a special treat in any salad, but the other ingredients are swell too</h6>
+              </div>
+            </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="thumbnail">
+              <img src="http://lorempixel.com/400/220/food/3" alt="...">
+              <div class="caption">
+                <h4>Cherry Tomato Salad</h4>
+                <h6>Pine nuts are a special treat in any salad, but the other ingredients are swell too</h6>
+              </div>
+            </div>
+            </div>
 
+            <div class="col-xs-12 text-center"><a href="#" class="h6">View All ></a></div>
+
+        </div>
     </div>
-    <!-- /.container -->
+</section><section class="like-products">
+    <div class="container">
+        <div class="row">   
+
+            <div class="col-xs-6 center-block text-center view-title">
+                <h3>You Might Like</h3>
+                <h5 class="vert-offset-top-1">Your neighbourhood search engine YP.ca helps you easily access local listings for 1.5 million businesses across Canada.</h5>
+            </div>
+
+        </div>
+        <div class="row view-items ">
+
+            <div class="col-xs-4">
+            <div class="thumbnail">
+              <img src="http://lorempixel.com/400/290/food/5" alt="...">
+              <div class="caption">
+                <h4>Cherry Tomato Salad</h4>
+                <h6>Pine nuts are a special treat in any salad, but the other ingredients are swell  a special treat a special treat a special treat a special treattoo</h6>
+                <div class="vert-offset-top-2"></div>               
+                <ul class="list-inline likes-ul">
+                    <li><span class="label label-default">Default</span></li>
+                    <li><span class="label label-default">Primary</span></li>
+                </ul>
+                <ul class="list-inline likes-ul pull-right">
+                    <li><i class="fa fa-heart" aria-hidden="true"></i>8</li>
+                    <li><i class="fa fa-comment-o" aria-hidden="true"></i>8</li>
+                </ul>
+              </div>
+            </div>
+            </div>          
+            <div class="col-xs-4">
+                <div class="thumbnail">
+              <img src="http://lorempixel.com/400/290/food/6" alt="...">
+              <div class="caption">
+                <h4>Cherry Tomato Salad</h4>
+                <h6>Pine nuts are a special treat in any salad, but the other ingredients are swell too</h6>
+                <div class="vert-offset-top-2"></div>               
+                <ul class="list-inline likes-ul">
+                    <li><span class="label label-default">Default</span></li>
+                    <li><span class="label label-default">Primary</span></li>
+                </ul>
+                <ul class="list-inline likes-ul pull-right">
+                    <li><i class="fa fa-heart" aria-hidden="true"></i>8</li>
+                    <li><i class="fa fa-comment-o" aria-hidden="true"></i>8</li>
+                </ul>
+              </div>
+            </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="thumbnail">
+              <img src="http://lorempixel.com/400/290/food/7" alt="...">
+              <div class="caption">
+                <h4>Cherry Tomato Salad</h4>
+                <h6>Pine nuts are a special treat in any salad, but the other ingredients are swell too</h6>
+                <div class="vert-offset-top-2"></div>
+                <ul class="list-inline likes-ul">
+                    <li><span class="label label-default">Default</span></li>
+                    <li><span class="label label-default">Primary</span></li>
+                </ul>
+                <ul class="list-inline likes-ul pull-right">
+                    <li><i class="fa fa-heart" aria-hidden="true"></i>8</li>
+                    <li><i class="fa fa-comment-o" aria-hidden="true"></i>8</li>
+                </ul>
+              </div>
+            </div>
+            </div>
+            <div class="col-xs-12 text-center"><a href="#" class="btn btn-gray">View All ></a></div>
+        </div>
+    </div>
+</section><section class="payment">
+    <div class="container">
+        <div class="row">
+            
+            <div class="col-md-6 text-center center-block">
+                <h2>Easy and Secure</h2>
+                <h5 class="vert-offset-top-2">The payment process with Module is always nice and comfortable process for your business.</h5>
+                <ul class="list-inline payment-ul vert-offset-top-4">
+                    <li><%= image_tag 'visa.png' %></li>
+                    <li><%= image_tag 'mastercard.png' %></li>
+                    <li><%= image_tag 'maestro.png' %></li>
+                    <li><%= image_tag 'fla.png' %></li>
+                    <li><%= image_tag 'square.png' %></li>
+                    <li><%= image_tag 'paypal.png' %></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section><footer>
+
+    <div class="container">
+        <div class="row header-nav">
+            <div class="col-md-6 text-left nav-item footer-item">
+                <a href="#"><%= image_tag 'footer-logo.png' %></a>
+                <p>&copy; 2016 Great Simple All rights reserved</p>
+            </div>
+
+            <div class="col-md-6 text-right nav-item">
+                <ul class="list-inline list-styled footer-list">
+                    <li><a href="#">Stories</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+</header>   
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript"></script>
+    <script src="http://malsup.github.io/jquery.cycle.all.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+    <script   src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
+     <script>
+          $(function() {
+            $( "#accordion" ).accordion({
+                 heightStyle: "content"
+            });
+          });
+  </script>
+  <script>
+  /*$(function() {
+    $( "#amount" ).val( "$" + $( "#slider-range" ).slider( "values", 0 ) +
+      " - $" + $( "#slider-range" ).slider( "values", 1 ) );
+  });*/
+  </script>
+
+    <!-- toolkit scripts -->
+    
+    <!-- /toolkit scripts -->
 
 </body>
-
 </html>
