--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,20 @@
 <!-- Footer -->
 <footer>
-    <div class="row">
-        <div class="col-lg-12">
-            <p>Copyright &copy; Your Website 2014</p>
-        </div>
-    </div>
+  <div class="container">
+      <div class="row header-nav">
+          <div class="col-md-6 text-left nav-item footer-item">
+              <a href="#"><%= image_tag 'footer-logo.png' %></a>
+              <p>&copy; 2016 Great Simple All rights reserved</p>
+          </div>
+
+          <div class="col-md-6 text-right nav-item">
+              <ul class="list-inline list-styled footer-list">
+                  <li><a href="#">Stories</a></li>
+                  <li><a href="#">Services</a></li>
+                  <li><a href="#">Work</a></li>
+                  <li><a href="#">Contact</a></li>
+              </ul>
+          </div>
+      </div>
+  </div>
 </footer>
