--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,9 +4,8 @@
 */
 
 @import "style";
-@import "bootstrap-sprockets";
-@import "bootstrap";
 @import "paginate.css";
+@import "toolkit.css";
 
 .ui-autocomplete {
   max-height: 100px;
